@@ -16,6 +16,8 @@
   the default listener only, can be given just once).
 - Fix QoS 2 protocol compliance - stop sending duplicate messages and handle
   timeouts correctly. Fixes bug #598290.
+- Set retain flag correctly for outgoing messages. It should only be set for
+  messages sent in response to a subscribe command (ie. stale data).
 
 0.8.3 - 20101004
 ================
